# pq-vdf

./: Cargo.toml  report.out  static.ipynb
src/: main.rs  protocol.rs  root_of_unity.rs  static.rs
