[package]
name = "vdf-implementation"
version = "0.1.0"
edition = "2021"
default-run = "new"

[[bin]]
name = "old"
path = "src/old/main.rs"

[[bin]]
name = "new"
path = "src/new/src/main.rs"

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
ndarray = {  version = "0.16.1", features=["rayon", "matrixmultiply-threading"]  }
once_cell = "1.19.0"
rug = "1.25.0"
criterion = "0.5.1"
rayon = "1.10.0"
num = "0.4.3"
fast-modulo = "0.4.0"
chrono = "0.4.1"

[[bench]]
name = "numbers"
harness = false


[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
